Cleaning blog + small fixes.

--- a/pages/en/blog.html
+++ b/pages/en/blog.html
@@ -17,6 +17,9 @@ permalink: /blog/
 			</p>
 	</div>
 	<h2>Article list :</h2>
+
+	<p style="font-size: 3em; text-align: center;">Coming soon ...</p>
+
 	<div class=articles>
 		{% for post in site.posts %}
 			{% if post.lang == "en" %}
