--- a/pages/fr/projects.html
+++ b/pages/fr/projects.html
@@ -20,13 +20,13 @@ permalink: /projects/fr
 
 	    	<h3>Description du projet Ada Lovelace :</h3>
 	    		<p>
-	    			<a href="https://adalovelace.ledantec-numerique.fr/">Le challenge Ada Lovelace</a> est un challenge informatique au cours duquel, des lycéennes en groupe de 4-5 doivent créer un site web pour répondre à une problèmatique.
+	    			<a href="https://adalovelace.ledantec-numerique.fr/">Le challenge Ada Lovelace</a> est un compétition informatique au cours de laquelle, des lycéennes en groupe de 4-5 doivent créer un site web pour répondre à une problèmatique.
 	    			Ce projet a pour but de promouvoir la place de la femme dans le monde du numérique, qui est pour l'instant sureprésenté par les hommes comme le montre ces statistiques :
 	    		</p>
 
 	    		<figure>
 					<img src="/ressources/taux_femmes_ens_sup.png" alt="Taux de Femme en étude Supérieur">
-					<figcaption>Taux de Femme en étude Supérieur <a href="https://www.education.gouv.fr/cid57096/reperes-et-references-statistiques.html">source</a></figcaption>
+					<figcaption>Proportion de femme en étude supérieure <a href="https://www.education.gouv.fr/cid57096/reperes-et-references-statistiques.html">source</a></figcaption>
 				</figure>
 
 				<p>
