--- a/pages/fr/work_expericence.html
+++ b/pages/fr/work_expericence.html
@@ -31,7 +31,7 @@ permalink: /work_experiences/fr
 			<p>
 				Le Commissariat de l'énergie atomique (CEA) est un acteur majeur du numérique français et européen. 
 				Il a pour objectif de faire de la recherche et de transmettre le savoir vers le milieu industriel.
-				Le Laboratoire d'Intégration des Systèmes et des Technologies (LIST) () est l'un des trois insituts du CEA Tech, il est spécialisé dans la recherche sur les systèmes numériques intelligents.
+				Le Laboratoire d'Intégration des Systèmes et des Technologies (LIST) est l'un des trois insituts du CEA Tech, il est spécialisé dans la recherche sur les systèmes numériques intelligents.
 			</p>
 		</div>
 
