Fix some W3C Error.

--- a/pages/en/home.html
+++ b/pages/en/home.html
@@ -64,7 +64,7 @@ permalink: /
 				<li>Data analysis and probabilistic modeling</li>
 				<li>Writting of scientific publications</li>
 			</ul>
-		<h3><a href="http://www.enssat.fr/"><img src="/ressources/logo_enssat.png" style="height: 2em; width: 5em; margin-right: 0.5em;"></a>
+		<h3><a href="http://www.enssat.fr/"><img src="/ressources/logo_enssat.png" alt="ENSSAT logo" style="height: 2em; width: 5em; margin-right: 0.5em;"></a>
 			Engineering diploma in computer science (AI) at ENSSAT Lannion (2017-2020)
 		</h3>
 			<p>
@@ -134,7 +134,7 @@ permalink: /
 						<li>Basic digital systems</li>
 					</ul>
 			</ul>
-		<h3><a href="http://www.lycee-pothier.com/"><img src="/ressources/pothier.jpg" style="height: 3em; width: 3.5em; margin-right: 0.5em;"></a>
+		<h3><a href="http://www.lycee-pothier.com/"><img src="/ressources/pothier.jpg" alt="Logo of the lycée Pothier"style="height: 3em; width: 3.5em; margin-right: 0.5em;"></a>
 			Preparatory classes at Lycée Pothier Orléans(2015-2017)</h3>
 			<p>
 			Intensive Mathematics and Physics program for engineering schools in France.
