--- a/pages/fr/home.html
+++ b/pages/fr/home.html
@@ -34,7 +34,7 @@ permalink: /fr
 			Je me suis spécialisé dans le domaine de l'analyse de données, l'IA et la recherche.
 			Grâce à mon parcours, j'atteste de solides connaissances sur différents sujets ce qui fait ma flexibilité en tant qu'ingénieur.
 		</p>
-		<h3><a href="https://www.univ-rennes1.fr/"><img src="/ressources/logo_ur1.png" style="height: 2em; width: 5em; margin-right: 0.5em;"></a>
+		<h3><a href="https://www.univ-rennes1.fr/"><img src="/ressources/logo_ur1.png" alt="logo universté rennes 1" style="height: 2em; width: 5em; margin-right: 0.5em;"></a>
 		Master Recherche en Informatique Rennes 1 (2019-2020)</h3>
 
 		<p>
@@ -63,7 +63,7 @@ permalink: /fr
 				<li>Analyse de données et modélisation probabilistique</li>
 				<li>Rédaction d'articles scientifiques</li>
 			</ul>
-			<h3><a href="http://www.enssat.fr/fr_FR/home"><img src="/ressources/logo_enssat.png" style="height: 2em; width: 5em; margin-right: 0.5em;"></a>
+			<h3><a href="http://www.enssat.fr/fr_FR/home"><img src="/ressources/logo_enssat.png" alt="logo enssat" style="height: 2em; width: 5em; margin-right: 0.5em;"></a>
 			Diplôme d'ingénieur informatique spécialité IA à l'ENSSAT Lannion (2017-2020)</h3>
 
 			<p>
@@ -133,7 +133,7 @@ permalink: /fr
 						<li>Bases des systèmes  numériques</li>
 					</ul>
 			</ul>
-		<h3><a href="http://www.lycee-pothier.com/"><img src="/ressources/pothier.jpg" style="height: 3em; width: 3em; margin-right: 0.5em;"></a>
+		<h3><a href="http://www.lycee-pothier.com/"><img src="/ressources/pothier.jpg" alt="Logo lycée Pothier" style="height: 3em; width: 3em; margin-right: 0.5em;"></a>
 		Classe préparatoire aux Lycée Pothier Orléans (2015-2017)
 		</h3>
 			<p>
@@ -199,7 +199,7 @@ permalink: /fr
 				<ul style="list-style-type: none; margin-left: -1em;">
 					<li>
 						<a href="https://github.com/cmoineau?tab=repositories&language=python" style="margin:1em;">
-						<img src="/ressources/python.png" alt="python logo" style="height: 1em; width: 1em; margin-right: 0.5em;""><b>Python</b></a></li>
+						<img src="/ressources/python.png" alt="python logo" style="height: 1em; width: 1em; margin-right: 0.5em;"><b>Python</b></a></li>
 					<li>
 						
 						<a href="https://github.com/cmoineau?tab=repositories&language=java" style="margin:1em;">
@@ -211,7 +211,7 @@ permalink: /fr
 					<li>
 						
 						<a href="https://github.com/cmoineau?tab=repositories&language=c" style="margin:1em;">
-							<img src="/ressources/c.png" alt="C logo" style="height: 1em; width: 1em; margin-right: 0.5em;""><b>C</b></a></li>
+							<img src="/ressources/c.png" alt="C logo" style="height: 1em; width: 1em; margin-right: 0.5em;"><b>C</b></a></li>
 				</ul>
 			</div><div class="box" style="margin-left: auto; margin-right: auto; flex-flow: column;">
 				<h3 style="border-bottom: 0px solid; margin-top: auto;">Langues :</h3>
