Fix W3C warnings and errors.

--- a/pages/en/home.html
+++ b/pages/en/home.html
@@ -35,7 +35,7 @@ permalink: /
 		</p>
 
 		
-		<h3><a href="https://international.univ-rennes1.fr/en"><img src="/ressources/logo_ur1.png" style="height: 2em; width: 5em; margin-right: 0.5em;"></a>
+		<h3><a href="https://international.univ-rennes1.fr/en"><img src="/ressources/logo_ur1.png" alt="Rennes 1 University logo" style="height: 2em; width: 5em; margin-right: 0.5em;"></a>
 			Master degree in research in computer science Rennes 1 (2019-2020)
 		</h3>
 			<p>
