--- a/pages/en/work_experience.html
+++ b/pages/en/work_experience.html
@@ -18,7 +18,7 @@ permalink: /work_experiences
 
 		<div class="box">
 			<h2 id="cea">CEA list</h2>
-			<img class="center "src="/ressources/cea.jpg" style="width: 8em; height: 8em; box-shadow: 2px 0px 6px black;">
+			<img class="center" src="/ressources/cea.jpg" alt="CEA Logo" style="width: 8em; height: 8em; box-shadow: 2px 0px 6px black;">
 	
 			<h3>General informations</h3>
 			<ul>
@@ -39,13 +39,13 @@ permalink: /work_experiences
 		
 		<div class="box">
 			<h2 id="irisa">Internship in the team SHAMAN of the IRISA 2020</h2>
-			<img class="center" src="/ressources/irisa.jpg" style="width: 14em; height: 4em; box-shadow: 2px 0px 6px black;">
+			<img class="center" src="/ressources/irisa.jpg" alt="IRISA Logo" style="width: 14em; height: 4em; box-shadow: 2px 0px 6px black;">
 
 			<h3>General informations</h3>
 			<ul>
 				<li><b>Date :</b> November 2019 - July 2020</li>
 				<li><b>Duration :</b> 6 months</li>
-				<li><b>Company :</b> <a href="http://www.irisa.fr/"></a>IRISA</a></li>
+				<li><b>Company :</b> <a href="http://www.irisa.fr/">IRISA</a></li>
 				<li><b>Location :</b> Lannion, France</li>
 				<li><b>Skills developed :</b> Python, Research, Redaction, Fuzzy Logic, Symbolic AI</li>
 				
@@ -79,7 +79,7 @@ permalink: /work_experiences
 		</div>
 		<div class="box">
 			<h2 id="NCTU">Internship at the NCTU 2019</h2>
-			<img class="center "src="/ressources/NCTU.jpg" style="width: 8em; height: 8em; border-radius: 50%; box-shadow: 2px 0px 6px black;">
+			<img class="center" src="/ressources/NCTU.jpg" alt="NCTU Logo" style="width: 8em; height: 8em; border-radius: 50%; box-shadow: 2px 0px 6px black;">
 
 			<h3>General informations</h3>
 			<ul>
@@ -107,7 +107,7 @@ permalink: /work_experiences
 		</div>
 		<div class="box">
 			<h2 id="Metropole">Orléans Métropole 2018</h2>
-			<img class="center "src="/ressources/orleans_metropole.jpg" style="width: 8em; height: 8em; box-shadow: 2px 0px 6px black;">
+			<img class="center" src="/ressources/orleans_metropole.jpg" alt="Orleans Metropole Logo" style="width: 8em; height: 8em; box-shadow: 2px 0px 6px black;">
 
 			<h3>General informations</h3>
 			<ul>
