--- a/pages/fr/work_expericence.html
+++ b/pages/fr/work_expericence.html
@@ -17,7 +17,7 @@ permalink: /work_experiences/fr
 
 		<div class="box">
 			<h2 id="cea">CEA LIST</h2>
-			<img class="center "src="/ressources/cea.jpg" style="width: 8em; height: 8em; box-shadow: 2px 0px 6px black;">
+			<img class="center" src="/ressources/cea.jpg" alt="Logo CEA" style="width: 8em; height: 8em; box-shadow: 2px 0px 6px black;">
 	
 			<h3>General informations</h3>
 			<ul>
@@ -38,7 +38,7 @@ permalink: /work_experiences/fr
 	
 	<div class="box">
 		<h2 id="irisa">Stage dans l'équipe SHAMAN de l'IRISA 2020</h2>
-		<img class="center "src="/ressources/irisa.jpg" style="width: 14em; height: 4em; box-shadow: 2px 0px 6px black;">
+		<img class="center" src="/ressources/irisa.jpg" alt="Logo IRISA" style="width: 14em; height: 4em; box-shadow: 2px 0px 6px black;">
 			<h3>Informations générales</h3>
 			<ul>
 				<li><b>Date :</b> Novembre 2019 - Juillet 2020</li>
@@ -80,7 +80,7 @@ permalink: /work_experiences/fr
 	</div>
 	<div class="box">
 		<h2 id="NCTU">Stage à la NCTU 2019</h2>
-		<img class="center "src="/ressources/NCTU.jpg" style="width: 8em; height: 8em; border-radius: 50%; box-shadow: 2px 0px 6px black;">
+		<img class="center" src="/ressources/NCTU.jpg" alt="Logo NCTU" style="width: 8em; height: 8em; border-radius: 50%; box-shadow: 2px 0px 6px black;">
 
 			<h3>Informations générales</h3>
 			<ul>
@@ -110,7 +110,7 @@ permalink: /work_experiences/fr
 	</div>		
 	<div class="box">
 		<h2 id="Metropole">Orléans Métropole 2018</h2>
-		<img class="center "src="/ressources/orleans_metropole.jpg" style="width: 8em; height: 8em; box-shadow: 2px 0px 6px black;">
+		<img class="center" src="/ressources/orleans_metropole.jpg" alt="Logo Orléans Métropole" style="width: 8em; height: 8em; box-shadow: 2px 0px 6px black;">
 
 			<h3>Informations générales</h3>
 			<ul>
