Update W3C + small typo fix.

--- a/pages/fr/home.html
+++ b/pages/fr/home.html
@@ -10,11 +10,11 @@ permalink: /fr
 			<img src="/ressources/Cyril.jpg" alt="Une photo de moi"  style="float:right; width: 8em; height: 9.5em; margin-left: 30px; margin-right: 15%; border-radius: 5%; box-shadow: 2px 0px 6px black;">
 			<h1 style="float: left;">Cyril MOINEAU</h1>
 		</div>
-		<div id="flex-container">
+		<div class="flex-container">
 			<div class="box" style="margin: 1em;">
 				<h2>Qui suis je ?</h2>
 				<p>
-					Je suis français né en 1997 et ingénieur chercheur en informatique. J'ai développé un intérêt pour le monde de la recherche grâce à mes deux ans d'études en classe préparatoire. 
+					Ingénieur chercheur en informatique. J'ai développé un intérêt pour le monde de la recherche grâce à mes deux ans d'études en classe préparatoire. 
 					</br>
 					Je suis passionné par l'apprentissage automatique et l'exploration de données. J'ai de nombreux centres d'intérêts et suis toujours enthousiaste à l'idée de pouvoir accumuler de nouvelles connaissances. 
 				</p>
@@ -22,7 +22,8 @@ permalink: /fr
 			<div class="box" style="margin: 1em;">
 				<h2>Actuellement</h2>
 				<p>
-					Je travaille au sein du <a href="http://www-list.cea.fr/">CEA</a>, un organisme public à la pointe de la recherche et du developpement. J'y suis employé en tant qu'ingénieur chercheur.
+					Ingénieur chercheur au <a href="http://www-list.cea.fr/">CEA</a>, un organisme public à la pointe de la recherche et du développement.
+					Je travaille sur des thématique de réseaux de neuronnes.
 				</p>
 			</div>
 		</div>
@@ -89,9 +90,9 @@ permalink: /fr
 					 document.getElementById('2_show').style.display='initial';"></i></h4>
 				
 
-			<ul id="enssat" class="reveal" style="display:none;">
-				<li><strong style="font-size: 1.5em;">Mathématiques :</strong></li>
-					<ul>
+			<ul id="enssat" class="reveal" style="display:none; list-style-type: none;">
+				<li ><strong style="font-size: 1em;">Mathématiques :</strong></li>
+					<li><ul>
 						<li>Logique Mathématiques</li>
 						<li>Analyse</li>
 						<li>Algèbre</li>
@@ -100,9 +101,9 @@ permalink: /fr
 						<li>Statistiques</li>
 						<li>Théorie des files d'attente</li>
 						<li>Cryptographie</li>
-					</ul>
-				<li><strong style="font-size: 1.5em;">Informatique :</strong></li>
-					<ul>
+					</ul></li>
+				<li><strong style="font-size: 1em;">Informatique :</strong></li>
+					<li><ul>
 						<li>Réseaux</li>
 						<li>Système d'exploitation</li>
 						<li>Bases de C</li>
@@ -126,12 +127,12 @@ permalink: /fr
 						<li>Web Data Management</li>
 						<li>Analyse et fouille de données massives (web sémantique)</li>
 						<li>Traitement automatique du langage et de la parole</li>
-					</ul>
-				<li><strong style="font-size: 1.5em;">Électronique :</strong></li>
-					<ul>
+					</ul></li>
+				<li><strong style="font-size: 1em;">Électronique :</strong></li>
+					<li><ul>
 						<li>Micro-contrôleurs</li>
 						<li>Bases des systèmes  numériques</li>
-					</ul>
+					</ul></li>
 			</ul>
 		<h3><a href="http://www.lycee-pothier.com/"><img src="/ressources/pothier.jpg" alt="Logo lycée Pothier" style="height: 3em; width: 3em; margin-right: 0.5em;"></a>
 		Classe préparatoire aux Lycée Pothier Orléans (2015-2017)
@@ -159,41 +160,41 @@ permalink: /fr
 		document.getElementById('3_show').style.display='initial';"></i>
 		</h4>
 
-		<ul id="prep" class="reveal" style="display:none;">
-				<li><strong style="font-size: 1.5em;">Mathématiques :</strong></li>
-					<ul>
+		<ul id="prep" class="reveal" style="display:none;  list-style-type: none;">
+				<li><strong style="font-size: 1em;">Mathématiques :</strong></li>
+					<li><ul>
 						<li>Algèbre linéaire</li>
 						<li>Espace vectoriel normé en dimensions finies</li>
 						<li>Espace Euclidien</li>
 						<li>Fonctions vectorielles et arcs paramétrés</li>
 						<li>Probabilités</li>
 						<li>Calcul différentiel</li>
-					</ul>
-				<li><strong style="font-size: 1.5em;">Physique :</strong></li>
-					<ul>
+					</ul></li>
+				<li><strong style="font-size: 1em;">Physique :</strong></li>
+					<li><ul>
 						<li>Optique non linéaire</li>
 						<li>Électromagnétisme</li>
 						<li>Mécanique</li>
 						<li>Thermodynamique</li>
 						<li>Physique des ondes</li>
-					</ul>
-				<li><strong style="font-size: 1.5em;">Chimie :</strong></li>
-					<ul>
+					</ul></li>
+				<li><strong style="font-size: 1em;">Chimie :</strong></li>
+					<li><ul>
 						<li>Mélanges et transformations: aspects thermodynamiques</li>
 						<li>Énergie chimique et énergie électrique: conversion et stockage</li>
 						<li>Atomes, molécules, complexes: modélisation quantique et réactivité</li>
 						<li>Molécules et matériaux organiques : stratégies de synthèse et applications</li>
-					</ul>
-				<li><strong style="font-size: 1.5em;">Informatique :</strong></li>
-					<ul>
+					</ul></li>
+				<li><strong style="font-size: 1em;">Informatique :</strong></li>
+					<li><ul>
 						<li>Introduction à Python</li>
 						<li>Introduction aux bases de données (mySQL)</li>
 						<li>Modélisation physique</li>
 						<li>Programmation récursive</li>
-					</ul>
+					</ul></li>
 			</ul>
 		<h2 style="margin-top: auto; ">Compétences</h2>
-		<div id="flex-container"  style="flex-wrap: wrap;">
+		<div class="flex-container"  style="flex-wrap: wrap;">
 			<div class="box" style="margin-left: auto; margin-right: auto; flex-flow: column;">
 				<h3 style="border-bottom: 0px solid; margin-top: auto;">Langages de programmation :</h3>
 				<ul style="list-style-type: none; margin-left: -1em;">
