--- a/pages/fr/work_experience.html
+++ b/pages/fr/work_experience.html
@@ -102,14 +102,13 @@ permalink: /work_experiences/fr
     		<h3>Expérience acquise :</h3>
     		<p>
 				Ce stage a été riche en expériences et fut une découverte du monde de la recherche très positive. 
-				Je ne pourrais pas suffisament remercier les personnes qui m'ont accueilli à la NCTU et qui m'ont permis de passer deux mois très bénéfiques. 
 				J'ai pu comprendre les difficultés de travailler dans un laboratoire de recherche. 
 				Même si la thématique du stage ne tombait pas dans celle que j'ai pu aborder lors de mes études, j'étais avide d'apprendre et d'appréhender ce sujet. 
 				Ces deux mois ont confirmé mon désir de faire de la recherche.
     		</p>
 	</div>		
 	<div class="box">
-		<h2 id="Metropole">Orléans Métropole 2018</h2>
+		<h2 id="Metropole">Stage à Orléans Métropole 2018</h2>
 		<img class="center" src="/ressources/orleans_metropole.jpg" alt="Logo Orléans Métropole" style="width: 8em; height: 8em; box-shadow: 2px 0px 6px black;">
 
 			<h3>Informations générales</h3>
@@ -123,12 +122,10 @@ permalink: /work_experiences/fr
     	    <h3>Description du poste :</h3>
     		<p>J'ai passé 2 mois lors de l'été 2018 à la <a href="http://www.orleans-metropole.fr/">Métropole d'Orléans</a> dans la direction des systèmes d'information (DSI). Pendant cet été, j'ai pu travailler sur les deux sujets suivants.
     		</p>
-    		<p>
-    			1. La mise en place d'un service de supervision en utilisant l'OS <a href="https://www.centreon.com/en/solutions/centreon/">Centreon</a>. Je suis arrivé au moment de la fusion des services de DSI de chaque commune. Dans ce contexte, la DSI d'Orléans a décidé de mettre à jour son système de supervision. Pendant mon stage, j'ai pu observer un vrai réseau et développer mes connaissances sur les réseaux et la virtualisation.
-    		</p>
-			<p>
-    			2. Gestion de l'Active Directory (AD). L'AD était composé d'utilisateurs qui n'avaient pas été supprimés. Ce projet était très intéressant puisque je devais trouver un faisceau d'indices me permettant de discriminer les utilisateurs actifs des inactifs. Pour cela j'ai développé des scripts Power Shell.
-    		</p>
+			<ol>
+				<li>La mise en place d'un service de supervision en utilisant l'OS <a href="https://www.centreon.com/en/solutions/centreon/">Centreon</a>. Je suis arrivé au moment de la fusion des services de DSI de chaque commune. Dans ce contexte, la DSI d'Orléans a décidé de mettre à jour son système de supervision. Pendant mon stage, j'ai pu observer un vrai réseau et développer mes connaissances sur les réseaux et la virtualisation.</li>
+				<li>Gestion de l'Active Directory (AD). L'AD était composé d'utilisateurs qui n'avaient pas été supprimés. Ce projet était très intéressant puisque je devais trouver un faisceau d'indices me permettant de discriminer les utilisateurs actifs des inactifs. Pour cela j'ai développé des scripts Power Shell.</li>
+			</ol>
     		<h3>Expérience acquise :</h3>
     		<p>
 				Ce fut mon premier stage technique, il m'a permis de découvrir beaucoup dans le domaine de la gestion de réseaux et de découvrir le monde du travail. 
