--- a/pages/en/work_experience.html
+++ b/pages/en/work_experience.html
@@ -53,7 +53,7 @@ permalink: /work_experiences
 		
 			<h3>Description of the internship :</h3>
 			<p>
-				As part of my final year internship, I worked at <a href="http://www.irisa.fr/"></a>IRISA</a>'s laboratory in the team <a href="http://www-shaman.irisa.fr/">SHAMAN</a> under the supervision of <a href="http://people.irisa.fr/Gregory.Smits/">Grégory SMITS</a>.
+				As part of my final year internship, I worked at <a href="http://www.irisa.fr/">IRISA</a>'s laboratory in the team <a href="http://www-shaman.irisa.fr/">SHAMAN</a> under the supervision of <a href="http://people.irisa.fr/Gregory.Smits/">Grégory SMITS</a>.
 				The goal of the internship was to improve a method to generate linguistic summaries of a big database.
 				A linguistic summary is a set of fuzzy properties such as "most crow are black".
 				To generate such a summary, the classic approach requires to go through the whole database, which results in a linear complexity depending of the size of the database. 
