Work experience and formation rebuild. Using post system for porjects.

--- a/pages/fr/home.html
+++ b/pages/fr/home.html
@@ -12,14 +12,14 @@ permalink: /fr
 		</div>
 		<div class="flex-container">
 			<div class="box" style="margin: 1em;">
-				<h2>Qui suis je ?</h2>
+				<h2><div class="bulb">Qui suis je ?</div></h2>
 				<p>
 					Ingénieur chercheur en informatique. J'ai développé un intérêt pour le monde de la recherche grâce à mes deux ans d'études en classe préparatoire. 
 					Je suis passionné par l'apprentissage automatique et l'exploration de données. J'ai de nombreux centres d'intérêts et suis toujours enthousiaste à l'idée de pouvoir accumuler de nouvelles connaissances. 
 				</p>
 			</div>
 			<div class="box" style="margin: 1em;">
-				<h2>Actuellement</h2>
+				<h2><div class="bulb">Actuellement</div></h2>
 				<p>
 					Ingénieur chercheur au <a href="http://www-list.cea.fr/">CEA</a>, un organisme public à la pointe de la recherche et du développement.
 					Je travaille sur des thématique de réseaux de neuronnes.
@@ -27,175 +27,11 @@ permalink: /fr
 			</div>
 		</div>
 
-		<h2>Formation</h2>
 
-		<p>
-			J'ai suivi le parcours classique pour devenir ingénieur, en faisant une classe préparatoire aux grandes écoles et en entrant dans une école d'ingénieur.
-			Je me suis spécialisé dans le domaine de l'analyse de données, l'IA et la recherche.
-			Grâce à mon parcours, j'atteste de solides connaissances sur différents sujets ce qui fait ma flexibilité en tant qu'ingénieur.
-		</p>
-		<h3><a href="https://www.univ-rennes1.fr/"><img src="/ressources/logo_ur1.png" alt="logo universté rennes 1" style="height: 2em; width: 5em; margin-right: 0.5em;"></a>
-		Master Recherche en Informatique Rennes 1 (2019-2020)</h3>
-
-		<p>
-		J'ai suivi la formation double diplôme de mon cursus d'ingénieur afin d'obtenir un diplôme de recherche en informatique.
-		Pendant cette formation, j'ai assisté à de nombreux colloques tels que "comment écrire un article scientifique", "la crise de la reproductibilité".
-		</p><p>
-			Ce diplôme en parallèle de ma formation d'ingénieur en informatique m'a permis d'avoir des cours plus pointus dans le domaine de la fouille de donnée.
-		</p>
-
-		<h4 style="text-align: center;">Liste des cours suivis
-		<i id="1_show" class="fa fa-arrow-circle-down" aria-hidden="true" style="margin-left: 0.5em; cursor:pointer;"
-		title="Cliquez pour voir la liste des cours"
-		onclick="document.getElementById('msif').style.display='block';
-				 document.getElementById('msif').style.animation='fadein 1s ease';
-				 document.getElementById('1_hide').style.display='initial';
-				 document.getElementById('1_show').style.display='none';"></i> 
-		<i id="1_hide" class="fa fa-arrow-circle-up" aria-hidden="true" style="display:none; margin-left: 0.5em; cursor:pointer;"
-		title="Cliquez pour cacher la liste des cours"
-		onclick="document.getElementById('msif').style.animation='fadeout 1s ease';
-				 setTimeout(function(){document.getElementById('msif').style.display='none';}, 1000);
-				 document.getElementById('1_hide').style.display='none';
-				 document.getElementById('1_show').style.display='initial';">
-		</i></h4>
-			<ul id="msif" class="reveal" style="display:none;">
-				<li>Fouille de données massives et visualisation</li>
-				<li>Analyse de données et modélisation probabilistique</li>
-				<li>Rédaction d'articles scientifiques</li>
-			</ul>
-			<h3><a href="http://www.enssat.fr/fr_FR/home"><img src="/ressources/logo_enssat.png" alt="logo enssat" style="height: 2em; width: 5em; margin-right: 0.5em;"></a>
-			Diplôme d'ingénieur informatique spécialité IA à l'ENSSAT Lannion (2017-2020)</h3>
-
-			<p>
-				J'ai suivi une formation d'ingénieur en informatique spécialisé en IA à l'ENSSAT Lannion.
-			</p><p>
-				Dans cette école, j'ai étudié l'informatique, l'électronique, le réseau, la programmation web, la cyber sécurité, l'IA et de nombreuses autres matières.
-				L'objectif de la formation était de faire de nous des ingénieurs polyvalents.
-				La force de cette approche est que je ne suis pas cantonné à ma spécialisation et je peux comprendre les enjeux des autres branches de l'ingénierie 
-				et ainsi mieux travailler en équipe.
-			</p>
-			<h4 style="text-align: center;">Liste des cours suivis
-			<i id="2_show" class="fa fa-arrow-circle-down" aria-hidden="true" style="margin-left: 0.5em; cursor:pointer;"
-			title="Cliquez pour voir la liste des cours"
-			onclick="document.getElementById('enssat').style.display='block';
-					 document.getElementById('enssat').style.animation='fadein 1s ease';
-					 document.getElementById('2_hide').style.display='initial';
-					 document.getElementById('2_show').style.display='none';"></i> 
-			<i id="2_hide" class="fa fa-arrow-circle-up" aria-hidden="true" style="display:none; margin-left: 0.5em; cursor:pointer;"
-			title="Cliquez pour cacher la liste des cours"
-			onclick="document.getElementById('enssat').style.animation='fadeout 1s ease';
-					 setTimeout(function(){document.getElementById('enssat').style.display='none';}, 1000);
-					 document.getElementById('2_hide').style.display='none';
-					 document.getElementById('2_show').style.display='initial';"></i></h4>
-				
-
-			<ul id="enssat" class="reveal" style="display:none; list-style-type: none;">
-				<li ><strong style="font-size: 1em;">Mathématiques :</strong></li>
-					<li><ul>
-						<li>Logique Mathématiques</li>
-						<li>Analyse</li>
-						<li>Algèbre</li>
-						<li>Analyse discrète et continue</li>
-						<li>Probabilités</li>
-						<li>Statistiques</li>
-						<li>Théorie des files d'attente</li>
-						<li>Cryptographie</li>
-					</ul></li>
-				<li><strong style="font-size: 1em;">Informatique :</strong></li>
-					<li><ul>
-						<li>Réseaux</li>
-						<li>Système d'exploitation</li>
-						<li>Bases de C</li>
-						<li>Bases de Java</li>
-						<li>Algorithmique</li>
-						<li>Structure de données</li>
-						<li>Programmation objet</li>
-						<li>Génie logiciel</li>
-						<li>Temps réel</li>
-						<li>Algorithmes distribués</li>
-						<li>Programmation Unix</li>
-						<li>Bases de données relationnelles</li>
-						<li>Bases de données avancées (logique floue)</li>
-						<li>Théorie des langages et compilation</li>
-						<li>Calculabilité</li>
-						<li>Programmation web Client / Serveur</li>
-						<li>Services Web</li>
-						<li>Sécurité des systèmes logiciel</li>
-						<li>Porgrammation déclarative et fonctionnelle</li>
-						<li>Apprentissage Automatique</li>
-						<li>Web Data Management</li>
-						<li>Analyse et fouille de données massives (web sémantique)</li>
-						<li>Traitement automatique du langage et de la parole</li>
-					</ul></li>
-				<li><strong style="font-size: 1em;">Électronique :</strong></li>
-					<li><ul>
-						<li>Micro-contrôleurs</li>
-						<li>Bases des systèmes  numériques</li>
-					</ul></li>
-			</ul>
-		<h3><a href="http://www.lycee-pothier.com/"><img src="/ressources/pothier.jpg" alt="Logo lycée Pothier" style="height: 3em; width: 3em; margin-right: 0.5em;"></a>
-		Classe préparatoire aux Lycée Pothier Orléans (2015-2017)
-		</h3>
-			<p>
-				J'ai intégré la classe préparatoire aux grandes écoles Maths spé, Maths sup du lycée Pothier.
-			</p>
-		<h4 style="text-align: center;">Liste des cours suivis
-		<i id="3_show" class="fa fa-arrow-circle-down" aria-hidden="true" style="margin-left: 0.5em; cursor:pointer;"
-		title="Cliquez pour voir la liste des cours"
-		onclick="
-		document.getElementById('prep').style.display='block'
-		document.getElementById('prep').style.animation='fadein 1s ease';
-		document.getElementById('3_hide').style.display='initial';
-		document.getElementById('3_show').style.display='none';"></i> 
-		<i id="3_hide" class="fa fa-arrow-circle-up" aria-hidden="true" style="display:none; margin-left: 0.5em; cursor:pointer;"
-		title="Cliquez pour cacher la liste des cours"
-		onclick="
-		setTimeout(
-			function(){
-				document.getElementById('prep').style.display='none';
-			}, 1000);
-		document.getElementById('prep').style.animation='fadeout 1s ease';
-		document.getElementById('3_hide').style.display='none';
-		document.getElementById('3_show').style.display='initial';"></i>
-		</h4>
-
-		<ul id="prep" class="reveal" style="display:none;  list-style-type: none;">
-				<li><strong style="font-size: 1em;">Mathématiques :</strong></li>
-					<li><ul>
-						<li>Algèbre linéaire</li>
-						<li>Espace vectoriel normé en dimensions finies</li>
-						<li>Espace Euclidien</li>
-						<li>Fonctions vectorielles et arcs paramétrés</li>
-						<li>Probabilités</li>
-						<li>Calcul différentiel</li>
-					</ul></li>
-				<li><strong style="font-size: 1em;">Physique :</strong></li>
-					<li><ul>
-						<li>Optique non linéaire</li>
-						<li>Électromagnétisme</li>
-						<li>Mécanique</li>
-						<li>Thermodynamique</li>
-						<li>Physique des ondes</li>
-					</ul></li>
-				<li><strong style="font-size: 1em;">Chimie :</strong></li>
-					<li><ul>
-						<li>Mélanges et transformations: aspects thermodynamiques</li>
-						<li>Énergie chimique et énergie électrique: conversion et stockage</li>
-						<li>Atomes, molécules, complexes: modélisation quantique et réactivité</li>
-						<li>Molécules et matériaux organiques : stratégies de synthèse et applications</li>
-					</ul></li>
-				<li><strong style="font-size: 1em;">Informatique :</strong></li>
-					<li><ul>
-						<li>Introduction à Python</li>
-						<li>Introduction aux bases de données (mySQL)</li>
-						<li>Modélisation physique</li>
-						<li>Programmation récursive</li>
-					</ul></li>
-			</ul>
-		<h2 style="margin-top: auto; ">Compétences</h2>
+		<h2 style="margin-top: auto; border-bottom: 1px solid;">Compétences</h2>
 		<div class="flex-container"  style="flex-wrap: wrap;">
 			<div class="box" style="margin-left: auto; margin-right: auto; flex-flow: column;">
-				<h3 style="border-bottom: 0px solid; margin-top: auto;">Langages de programmation :</h3>
+				<h3 style="border-bottom: 0px solid; margin-top: auto;"><div class="bulb"><i class="fa fa-laptop" aria-hidden="true"></i> Langages de programmation</div></h3>
 				<ul style="list-style-type: none; margin-left: -1em;">
 					<li>
 						<a href="https://github.com/cmoineau?tab=repositories&language=python" style="margin:1em;">
@@ -214,7 +50,7 @@ permalink: /fr
 							<img src="/ressources/c.png" alt="C logo" style="height: 1em; width: 1em; margin-right: 0.5em;"><b>C</b></a></li>
 				</ul>
 			</div><div class="box" style="margin-left: auto; margin-right: auto; flex-flow: column;">
-				<h3 style="border-bottom: 0px solid; margin-top: auto;">Langues :</h3>
+				<h3 style="border-bottom: 0px solid; margin-top: auto;"><div class="bulb"><i class="fa fa-language" aria-hidden="true"></i> Langues</div></h3>
 				<ul style="list-style-type: none; margin-left: -1em;">
 					<li>
 						<img src="/ressources/fr_flag.png" alt="french flag" style="height: 1em; width: 1.5em; margin-right: 0.5em;"><b>French (Native level)</b></li>
@@ -225,7 +61,7 @@ permalink: /fr
 					
 				</ul>
 			</div><div class="box" style="margin-left: auto; margin-right: auto; flex-flow: column;">
-				<h3 style="border-bottom: 0px solid; margin-top: auto;">Compétences principales :</h3>
+				<h3 style="border-bottom: 0px solid; margin-top: auto;"><div class="bulb"><i class="fa fa-graduation-cap" aria-hidden="true"></i> Compétences principales</div></h3>
 				<ul>
 					<li><b>Rédaction scientifique</b></li>
 					<li><b>Génie logiciel</b></li>
