--- a/pages/fr/work_experience.html
+++ b/pages/fr/work_experience.html
@@ -7,6 +7,8 @@ permalink: /work_experiences/fr
 ---
 	<div class="blurb">
 		<h1>Mon expérience professionnelle</h1>
+		<p>Si vous voulez voir les études que j'ai réalisé, vous pouvez cliquer <a href="/education/fr">ici</a>.</p>
+
 		<h2 style="text-align: left">Sommaire :</h2>
 		<ul class="summary">
 			<li><a href="#cea">CEA list</a></li>
@@ -20,11 +22,11 @@ permalink: /work_experiences/fr
 			<img class="center" src="/ressources/cea.jpg" alt="Logo CEA" style="width: 8em; height: 8em; box-shadow: 2px 0px 6px black;">
 	
 			<h3>General informations</h3>
-			<ul>
-				<li><b>Date :</b> November 2020 - Now</li>
-				<li><b>Entreprise :</b> <a href="http://www-list.cea.fr/">CEA</a></li>
-				<li><b>Lieux :</b> Paris, France</li>
-				<li><b>Aptitudes développées :</b> Python, C++, Réseaux de Neuronnes profonds </li>
+			<ul style="list-style-type: none;">
+				<li><i class="fa fa-calendar" aria-hidden="true"></i><b> Date :</b> November 2020 - Now</li>
+				<li><i class="fa fa-building-o" aria-hidden="true"></i><b> Entreprise :</b> <a href="http://www-list.cea.fr/">CEA</a></li>
+				<li><i class="fa fa-map-marker" aria-hidden="true"></i><b> Lieux :</b> Paris, France</li>
+				<li><i class="fa fa-graduation-cap" aria-hidden="true"></i><b> Aptitudes développées :</b> Python, C++, Réseaux de Neuronnes profonds </li>
 			</ul>
 		
 			<h3>Description de l'entreprise :</h3>
@@ -40,12 +42,12 @@ permalink: /work_experiences/fr
 		<h2 id="irisa">Stage dans l'équipe SHAMAN de l'IRISA 2020</h2>
 		<img class="center" src="/ressources/irisa.jpg" alt="Logo IRISA" style="width: 14em; height: 4em; box-shadow: 2px 0px 6px black;">
 			<h3>Informations générales</h3>
-			<ul>
-				<li><b>Date :</b> Novembre 2019 - Juillet 2020</li>
-				<li><b>Durée :</b> 8 mois</li>
-				<li><b>Entreprise :</b> <a href="http://www.irisa.fr/">IRISA</a></li>
-				<li><b>Lieux :</b> Lannion, France</li>
-				<li><b>Aptitudes développées :</b> Python, Recherche, Rédaction, Logique Floue, IA Symbolique, Flask, Docker</li>
+			<ul style="list-style-type: none;">
+				<li><i class="fa fa-calendar" aria-hidden="true"></i><b> Date :</b> Novembre 2019 - Juillet 2020</li>
+				<li><i class="fa fa-clock-o" aria-hidden="true"></i></i><b> Durée :</b> 8 mois</li>
+				<li><i class="fa fa-building-o" aria-hidden="true"></i><b> Entreprise :</b> <a href="http://www.irisa.fr/">IRISA</a></li>
+				<li><i class="fa fa-map-marker" aria-hidden="true"></i><b> Lieux :</b> Lannion, France</li>
+				<li><i class="fa fa-graduation-cap" aria-hidden="true"></i><b> Aptitudes développées :</b> Python, Recherche, Rédaction, Logique Floue, IA Symbolique, Flask, Docker</li>
 			</ul>
 			<h3>Description du poste :</h3>
 			<p>
@@ -83,12 +85,12 @@ permalink: /work_experiences/fr
 		<img class="center" src="/ressources/NCTU.jpg" alt="Logo NCTU" style="width: 8em; height: 8em; border-radius: 50%; box-shadow: 2px 0px 6px black;">
 
 			<h3>Informations générales</h3>
-			<ul>
-				<li><b>Date :</b> Juin 2019 - Août 2019</li>
-				<li><b>Durée :</b> 2 mois</li>
-				<li><b>Entreprise :</b> <a href="https://www.nctu.edu.tw/en/">National Chiao Tung University</a></li>
-				<li><b>Lieux :</b> Hsinchu, Taïwan</li>
-				<li><b>Aptitudes développées :</b> Python, Keras, Anglais</li>
+			<ul style="list-style-type: none;">
+				<li><i class="fa fa-calendar" aria-hidden="true"></i><b> Date :</b> Juin 2019 - Août 2019</li>
+				<li><i class="fa fa-clock-o" aria-hidden="true"></i></i><b> Durée :</b> 2 mois</li>
+				<li><i class="fa fa-building-o" aria-hidden="true"></i><b> Entreprise :</b> <a href="https://www.nctu.edu.tw/en/">National Chiao Tung University</a></li>
+				<li><i class="fa fa-map-marker" aria-hidden="true"></i><b> Lieux :</b> Hsinchu, Taïwan</li>
+				<li><i class="fa fa-graduation-cap" aria-hidden="true"></i><b> Aptitudes développées :</b> Python, Keras, Anglais</li>
 			</ul>
     		<h3>Description du poste :</h3>
     		<p>
@@ -112,12 +114,12 @@ permalink: /work_experiences/fr
 		<img class="center" src="/ressources/orleans_metropole.jpg" alt="Logo Orléans Métropole" style="width: 8em; height: 8em; box-shadow: 2px 0px 6px black;">
 
 			<h3>Informations générales</h3>
-			<ul>
-				<li><b>Date :</b> Juillet 2018 - Août 2018</li>
-				<li><b>Durée :</b> 2 mois</li>
-				<li><b>Entreprise :</b> <a href="http://www.orleans-metropole.fr/">Orléans Métropole</a></li>
-				<li><b>Lieux :</b> Orléans, France</li>
-				<li><b>Aptitudes développées :</b> Shell Script, Réseaux, Linux</li>
+			<ul style="list-style-type: none;">
+				<li><i class="fa fa-calendar" aria-hidden="true"></i><b> Date :</b> Juillet 2018 - Août 2018</li>
+				<li><i class="fa fa-clock-o" aria-hidden="true"></i></i><b> Durée :</b> 2 mois</li>
+				<li><i class="fa fa-building-o" aria-hidden="true"></i><b> Entreprise :</b> <a href="http://www.orleans-metropole.fr/">Orléans Métropole</a></li>
+				<li><i class="fa fa-map-marker" aria-hidden="true"></i><b> Lieux :</b> Orléans, France</li>
+				<li><i class="fa fa-graduation-cap" aria-hidden="true"></i><b> Aptitudes développées :</b> Shell Script, Réseaux, Linux</li>
 			</ul>
     	    <h3>Description du poste :</h3>
     		<p>J'ai passé 2 mois lors de l'été 2018 à la <a href="http://www.orleans-metropole.fr/">Métropole d'Orléans</a> dans la direction des systèmes d'information (DSI). Pendant cet été, j'ai pu travailler sur les deux sujets suivants.
