--- a/pages/en/home.html
+++ b/pages/en/home.html
@@ -12,210 +12,51 @@ permalink: /
 		</div>
 		<div class="flex-container">
 			<div class="box" style="margin: 1em;">
-				<h2>Who am I ?</h2>
+				<h2><div class="bulb">Who am I ?</div></h2>
 					<p>
 						I am a French research engineer in computer science born in 1997. Since my preparatory class, I have been curious about the world of research. 
 						I am interested in the field of machine learning and data mining. But I have many other center of interrest and I am keen on learning new things !
 					</p>
 			</div>
 			<div class="box" style="margin: 1em;">
-				<h2>Currently</h2>
+				<h2><div class="bulb">Currently</div></h2>
 				<p>
 					I am working at the <a href="http://www-list.cea.fr/en/">CEA</a>, a company at the cutting edge of technological research and development, as a research engineer in the domain of machine learning.
 				</p>
 			</div>
 		</div>
 
-		<h2>Education</h2>
-
-		<p>
-		I have a typical French engineering educational background, going from a preparatory school to an engineering school. 
-		I specialized in data science, AI and research.
-		My well-rounded educational background made me gain knowledge on various topics, which I believe made me a more versatile engineer. 
-		</p>
-
-		
-		<h3><a href="https://international.univ-rennes1.fr/en"><img src="/ressources/logo_ur1.png" alt="Rennes 1 University logo" style="height: 2em; width: 5em; margin-right: 0.5em;"></a>
-			Master degree in research in computer science Rennes 1 (2019-2020)
-		</h3>
-			<p>
-			I got a second diploma in <b>research in computer science</b>, in order to expand my knowledge in the field of research.
-			During this formation, I attended various colloquia on topics such as paper writing and crisis reproductivity.
-			</p><p>
-			This formation in conjunction with my major in AI have allowed me to get more in-depth courses in the field of data science.
-			</p>
-
-			<h4 style="text-align: center;">List of courses
-			<i id="1_show" class="fa fa-arrow-circle-down" aria-hidden="true" style="margin-left: 0.5em; cursor:pointer;"
-			title="Click to show the list of courses"
-			onclick="document.getElementById('msif').style.display='block';
-					 document.getElementById('msif').style.animation='fadein 1s ease';
-					 document.getElementById('1_hide').style.display='initial';
-					 document.getElementById('1_show').style.display='none';"></i> 
-			<i id="1_hide" class="fa fa-arrow-circle-up" aria-hidden="true" style="display:none; margin-left: 0.5em; cursor:pointer;"
-			title="Click to hide the list of courses"
-			onclick="document.getElementById('msif').style.animation='fadeout 1s ease';
-					 setTimeout(function(){document.getElementById('msif').style.display='none';}, 1000);
-					 document.getElementById('1_hide').style.display='none';
-					 document.getElementById('1_show').style.display='initial';"></i>
-			</h4>
-			<ul id="msif" class="reveal" style="display:none;">
-				<li>Data mining and visualisation</li>
-				<li>Data analysis and probabilistic modeling</li>
-				<li>Writting of scientific publications</li>
-			</ul>
-		<h3><a href="http://www.enssat.fr/"><img src="/ressources/logo_enssat.png" alt="ENSSAT logo" style="height: 2em; width: 5em; margin-right: 0.5em;"></a>
-			Engineering diploma in computer science (AI) at ENSSAT Lannion (2017-2020)
-		</h3>
-			<p>
-			I graduated from ENSSAT Lannion, a French engineering school, with a <b>Software and Computing engineering diploma</b> with a major in AI.
-			</p><p>
-			In this engineering school, I studied computer science, electronics, network, web programation, cyber security, AI and many other topics.
-			The goal of the curriculum was to acquire a large tool-set. 
-			The strength of this approach is that not only am I specialized in AI but I can also understand the issues at stake in the other engineering branches.
-			</p>
-			<h4 style="text-align: center;">List of courses
-
-			<i id="2_show" class="fa fa-arrow-circle-down" aria-hidden="true" style="margin-left: 0.5em; cursor:pointer;"
-			title="Click to show the list of courses"
-			onclick="document.getElementById('enssat').style.display='block';
-					 document.getElementById('enssat').style.animation='fadein 1s ease';
-					 document.getElementById('2_hide').style.display='initial';
-					 document.getElementById('2_show').style.display='none';"></i> 
-			<i id="2_hide" class="fa fa-arrow-circle-up" aria-hidden="true" style="display:none; margin-left: 0.5em; cursor:pointer;"
-			title="Click to hide the list of courses"
-			onclick="document.getElementById('enssat').style.animation='fadeout 1s ease';
-					 setTimeout(function(){document.getElementById('enssat').style.display='none';}, 1000);
-					 document.getElementById('2_hide').style.display='none';
-					 document.getElementById('2_show').style.display='initial';"></i>
-			</h4>
-			<ul id="enssat" class="reveal" style="display:none; list-style-type: none;">
-				<li><strong style="font-size: 1em;">Mathematics :</strong></li>
-					<li><ul>
-						<li>Mathematical logic</li>
-						<li>Analysis</li>
-						<li>Algebra</li>
-						<li>Continuous and discrete analysis</li>
-						<li>Probability</li>
-						<li>Statistics</li>
-						<li>Theory of queues</li>
-						<li>Cryptography</li>
-					</ul></li>
-				<li><strong style="font-size: 1em;">Computer science :</strong></li>
-					<li><ul>
-						<li>Networking</li>
-						<li>Operating System</li>
-						<li>Basis of C</li>
-						<li>Basis of Java</li>
-						<li>Algorithmics</li>
-						<li>Data structure</li>
-						<li>Oriented Object Programing</li>
-						<li>Software engineering</li>
-						<li>Real time</li>
-						<li>Distributed algorithms</li>
-						<li>Unix programming</li>
-						<li>Relational Databases</li>
-						<li>Advanced Databases (fuzzy logic)</li>
-						<li>Theory of Languages and Compilation</li>
-						<li>Computability</li>
-						<li>Client / Server Web Programming</li>
-						<li>Web Services</li>
-						<li>Security of software systems</li>
-						<li>Declarative and functionnal programming</li>
-						<li>Machine learning</li>
-						<li>Web Data Management</li>
-						<li>Big data mining and analysis (semantic web)</li>
-						<li>Automatic processing of languages and speech</li>
-					</ul></li>
-				<li><strong style="font-size: 1em;">Electronics :</strong></li>
-					<li><ul>
-						<li>Microcontrollers</li>
-						<li>Basic digital systems</li>
-					</ul></li>
-			</ul>
-		<h3><a href="http://www.lycee-pothier.com/"><img src="/ressources/pothier.jpg" alt="Logo of the lycée Pothier" style="height: 3em; width: 3.5em; margin-right: 0.5em;"></a>
-			Preparatory classes at Lycée Pothier Orléans(2015-2017)</h3>
-			<p>
-			Intensive Mathematics and Physics program for engineering schools in France.
-			</p>
-			<h4 style="text-align: center;">List of courses
-			<i id="3_show" class="fa fa-arrow-circle-down" aria-hidden="true" style="margin-left: 0.5em; cursor:pointer;"
-			title="Click to show the list of courses"
-			onclick="document.getElementById('prep').style.display='block';
-					 document.getElementById('prep').style.animation='fadein 1s ease';
-					 document.getElementById('3_hide').style.display='initial';
-					 document.getElementById('3_show').style.display='none';"></i> 
-			<i id="3_hide" class="fa fa-arrow-circle-up" aria-hidden="true" style="display:none; margin-left: 0.5em; cursor:pointer;"
-			title="Click to hide the list of courses"
-			onclick="document.getElementById('prep').style.animation='fadeout 1s ease';
-					 setTimeout(function(){document.getElementById('prep').style.display='none';}, 1000);
-					 document.getElementById('3_hide').style.display='none';
-					 document.getElementById('3_show').style.display='initial';"></i>
-			</h4>
-			<ul id="prep" class="reveal" style="display:none; list-style-type: none;">
-				<li><strong style="font-size: 1em;">Mathematics :</strong></li>
-					<li><ul>
-						<li>Linear algebra</li>
-						<li>Normed vectorial space in finite dimension</li>
-						<li>Euclidean space</li>
-						<li>Vector function and parametric equation of the curve</li>
-						<li>Probability</li>
-						<li>Diffential calculus</li>
-					</ul></li>
-				<li><strong style="font-size: 1em;">Physics :</strong></li>
-					<li><ul>
-						<li>Non-linear optics</li>
-						<li>Electromagnetism</li>
-						<li>Mechanic</li>
-						<li>Thermodynamic</li>
-						<li>Wave physics</li>
-					</ul></li>
-				<li><strong style="font-size: 1em;">Chemistry :</strong></li>
-					<li><ul>
-						<li>Mixtures and transformations: thermodynamic aspects</li>
-						<li>Chemical energy and electrical energy: conversion and storage</li>
-						<li>Atoms, molecules, complexes: quantum modeling and reactivity</li>
-						<li>Molecules and organic materials: synthesis strategy and applications</li>
-					</ul></li>
-				<li><strong style="font-size: 1em;">Computer science :</strong></li>
-					<li><ul>
-						<li>Introduction to Python</li>
-						<li>Introduction to data base (mySQL)</li>
-						<li>Physic modelistation</li>
-						<li>Recursive programming</li>
-					</ul></li>
-			</ul>
-			<h2 style="margin-top: auto; ">Skills</h2>
-			<div class="flex-container"  style="flex-wrap: wrap;">
+			<h2 style="margin-top: auto; border-bottom: 1px solid;">Skills</h2>
+			<div class="flex-container" style="flex-wrap: wrap;">
 				<div class="box" style="margin-left: auto; margin-right: auto; flex-flow: column;">
-					<h3 style="border-bottom: 0px solid; margin-top: auto;">Programming languages :</h3>
+					<h3 style="border-bottom: 0px solid; margin-top: auto;"><div class="bulb"><i class="fa fa-laptop" aria-hidden="true"></i> Programming languages :</div></h3>
 					<ul style="list-style-type: none; margin-left: -1em;">
-						<li>
+						<li style="margin-bottom: 0.2em;">
 							<a href="https://github.com/cmoineau?tab=repositories&language=python" style="margin:1em;">
 							<img src="/ressources/python.png" alt="python logo" style="height: 1em; width: 1em; margin-right: 0.5em;"><b>Python</b></a></li>
-						<li>
+						<li style="margin-bottom: 0.2em;">
 							<a href="https://github.com/cmoineau?tab=repositories&language=java" style="margin:1em;">
 								<img src="/ressources/java.png" alt="java logo" style="height: 1em; width: 1em; margin-right: 0.5em;"> <b>Java</b></a></li>
-						<li>
+						<li style="margin-bottom: 0.2em;">
 							<a href="https://github.com/cmoineau?tab=repositories&language=javascript" style="margin:1em;">
 								<img src="/ressources/js.png" alt="javascript logo" style="height: 1em; width: 1em; margin-right: 0.5em;"><b>JavaScript</b></a></li>
-						<li>
+						<li style="margin-bottom: 0.2em;">
 							<a href="https://github.com/cmoineau?tab=repositories&language=c" style="margin:1em;">
 								<img src="/ressources/c.png" alt="C logo" style="height: 1em; width: 1em; margin-right: 0.5em;"><b>C</b></a></li>
 					</ul>
 				</div><div class="box" style="margin-left: auto; margin-right: auto; flex-flow: column;">
-					<h3 style="border-bottom: 0px solid; margin-top: auto;">Languages :</h3>
+					<h3 style="border-bottom: 0px solid; margin-top: auto;"><div class="bulb"><i class="fa fa-language" aria-hidden="true"></i> Languages :</div></h3>
 					<ul style="list-style-type: none; margin-left: -1em;">
-						<li>
+						<li style="margin-bottom: 0.5em;">
 							<img src="/ressources/fr_flag.png" alt="french flag" style="height: 1em; width: 1.5em; margin-right: 0.5em;"><b>French (Native level)</b></li>
-						<li>
+						<li style="margin-bottom: 0.5em;">
 							<img src="/ressources/en_flag.png" alt="UK flag" style="height: 1em; width: 1.5em; margin-right: 0.5em;"><b>English (C1 level)</b></li>
-						<li>
+						<li style="margin-bottom: 0.5em;">
 							<img src="/ressources/es_flag.png" alt="spanish flag" style="height: 1em; width: 1.5em; margin-right: 0.5em;"><b>Spanish (Beginner level)</b></li>
 						
 					</ul>
 				</div><div class="box" style="margin-left: auto; margin-right: auto; flex-flow: column;">
-					<h3 style="border-bottom: 0px solid; margin-top: auto;">Main skills :</h3>
+					<h3 style="border-bottom: 0px solid; margin-top: auto;"><div class="bulb"><i class="fa fa-graduation-cap" aria-hidden="true"></i> Main skills :</div></h3>
 					<ul>
 						<li><b>Scientific writing</b></li>
 						<li><b>Software engineering</b></li>
