--- a/pages/en/projects.html
+++ b/pages/en/projects.html
@@ -5,81 +5,26 @@ lang: en
 ref: projects
 permalink: /projects
 ---
-	<div class="blurb">
-		<h1>My projects</h1>
-		<h2 style="text-align: left">Summary :</h2>
-		<ul>
-    		<li><a href="#Ada">Ada Lovelace & Hackathon ENSSAT  2019</a></li>
-        	<li><a href="#BomberBall">BomberBall</a></li>
-    	</ul>
-	<div class="box" id="Ada">
-    	<h2>Ada Lovelace & Hacakthon ENSSAT (2019)</h2>
-    		<p>
-    			During my 2nd year at <a href="http://www.enssat.fr/">ENSSAT</a>, I worked on two projects with the same team of students. These projects revolved around fulfilling a challenge in programming. Bellow, you will find a description of both projects.
-    		</p>
 
-	    	<h3>Description of the project Ada Lovelace :</h3>
-	    		<p>
-	    			<a href="https://adalovelace.ledantec-numerique.fr/">The Ada Lovelace challenge</a> is a coding challenge in which high-school girls have to create a web site about a topic in a group of 4-5.
-	    			This project aims at promoting the place of women in the numeric world, which mostly represented by men as shown by statistics :
-	    		</p>
+<div class="blurb">
+	<h1>Projects</h1>
 
-	    		<figure>
-					<img src="/ressources/taux_femmes_ens_sup.png" alt="Taux de Femme en étude Supérieur">
-					<figcaption>Women rate in higher education <a href="https://www.education.gouv.fr/cid57096/reperes-et-references-statistiques.html">source</a></figcaption>
-				</figure>
+	<h2>Projects list :</h2>
 
-				<p>
-					There is not even 1/3 of women in engineer training (first line).
-					In order to change this, <a href="http://lycee-ledantec.fr/">Lycée Le Dantec</a>, <a href="http://www.enssat.fr/">ENSSAT</a>, <a href="https://www.orange.fr/portail">Orange</a> and <a href="http://www.ellesbougent.com/">Elles Bougent</a> have decided to create this event to touch young girls and give them a beneficial first experience of the numeric world. 
-				</p>
-				<p>
-					To achieve this goal, groups are helped by women who are in higher study, this help is mandatory since the schoolgirls have no notion in web designing. At the same time, the tutor give them an example of women that work in the numeric, which can break stereotypes.
-				</p>
-
-			<h3>Description of Hackathon ENSSAT project :</h3>
-
-			<p>
-				The Hackathon ENSSAT project is a programming competition open for students. During this event, participants have to propose a solution around a thematic, in a limited time of 24 hours. They are in a team of 5 and have to make a small presentation at the end of the 24 hours. The students are evaluated by a professional jury, both from the industrial and the laboratory fields. The goal of this competition is to help student improve their skills by putting them in an extreme situation (e.g.,"only" 24 hours). 
-			</p>
-
-
-	    	<h3>My contribution to these projects :</h3>
-
-	    		<p>
-	    			As a student at <a href="http://www.enssat.fr/">ENSSAT Lannion</a>, these projects gave me the opportunity to galvanise the student life. I have been the coordinator of these projects. As explained above, the Ada Lovelace project have a lot of actors, my goal was to coordinate these actors in order to create an enjoyable and interesting challenge for the students.
-	    		</p>
-	    		<p>
-	    			But not only, I had to manage the student team for both projects and help them; I had participate in the creation of the budget for the event, to the sponsoring research and in managing some logistic details. I also had to work with the others actors, communicate with them, managing conflicts and organizing our meetings. I had to coordinate the search for sponsors and design the communication strategy.
-	    		</p>
-	    		<p>
-	    			The Ada Lovelace project was my first experience with so many partners, it was a good experience in working and coordinating people who are far from each other.
-	    		</p>
-
-	    	<h3>Links to some articles about the challenge Ada Lovelace :</h3>
-	    	<ul>
-	    		<li>Article from <a href="https://www.ouest-france.fr/bretagne/lannion-22300/lannion-au-lycee-les-filles-font-parler-leur-science-6287822">Ouest France</a></li>
-		    	<li>Article from the <a href="https://www.letelegramme.fr/cotes-darmor/lannion/ada-lovelace-des-nouveautes-pour-le-concours-20-03-2019-12237099.php">Télégramme</a></li>
-	    	</ul>
-			
-	    	<h3>Links to some articles about the Hackathon :</h3>
-		    	<ul>
-		    		<li>Article from <a href="https://www.ouest-france.fr/bretagne/lannion-22300/six-equipes-au-marathon-du-code-hackathon-6267065">Ouest France</a></li>
-	    			<li>Article from the <a href="https://www.letelegramme.fr/cotes-darmor/lannion/hackathon-une-appli-au-bout-de-la-nuit-18-03-2019-12235588.php">Télégramme</a></li>
-		    		
-		    	</ul>
+	<div class=articles>
+		{% for post in site.posts %}
+			{% if post.lang == "en" %}
+			<div class=article>
+				<a href="{{ post.url }}" title="{{ post.title }}">
+				<div class=article_container>
+					<img class=post_image src="{{ post.image }}">
+					<div class=post_text>
+						<p class=post_title>{{ post.title }}</p>
+					</div> 
+				</div>
+				</a>
+			</div>	
+			{% endif %}	
+		{% endfor %}
 	</div>
-	<div class="box" id="BomberBall">
-    	<h2>BomberBall</h2>
-    		<p>
-    			Bomber Ball was an important project for software engineering course. During this project, we were role playing a company and the professors were playing the client. 
-    			During this project we respond to a call for tender, and create various meetings with our fictive company in order to respond to the fictive client's demand. The company wanted to create a video game similar to the Bomber Man. We had to code the game in Java since it was the language we used the most in junior year at ENSSAT.
-    		</p>
-    		
-    		<h3>The result :</h3>
-    			<p>You can see the project on my github account <a href="https://github.com/cmoineau/GL-BomberBall">here</a>.
-    			And here you can watch a small video we made to show the result during the final presentation :
-    			<iframe style="border: 0; padding-top: 1em;" class="center" width="600" height="330" src="https://www.youtube.com/embed/0CLnEmHGonU" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-				</p>
-	</div>
-	</div><!-- /.blurb -->
+</div>
