--- a/pages/fr/projects.html
+++ b/pages/fr/projects.html
@@ -5,84 +5,26 @@ lang: fr
 ref: projects
 permalink: /projects/fr
 ---
-	<div class="blurb">
-		<h1>Mes projets</h1>
-		<h2 style="text-align: left">Sommaire :</h2>
-		<ul>
-    		<li><a href="#Ada">Ada Lovelace & Hackathon ENSSAT  2019</a></li>
-        	<li><a href="#BomberBall">BomberBall</a></li>
-    	</ul>
-	<div class="box" id="Ada">
-    	<h2>Ada Lovelace & Hacakthon ENSSAT (2019)</h2>
-    		<p>
-    			Pendant ma seconde année à l'<a href="http://www.enssat.fr/">ENSSAT</a>, j'ai travaillé sur deux projets avec la même équipe d'étudiants. Ces projets s'orientaient tous deux vers l'organisation d'un concours de programmation. Vous trouverez ci-dessous une description de chaque projet, ainsi que ma contribution.
-    		</p>
 
-	    	<h3>Description du projet Ada Lovelace :</h3>
-	    		<p>
-	    			<a href="https://adalovelace.ledantec-numerique.fr/">Le challenge Ada Lovelace</a> est un compétition informatique au cours de laquelle, des lycéennes en groupe de 4-5 doivent créer un site web pour répondre à une problèmatique.
-	    			Ce projet a pour but de promouvoir la place de la femme dans le monde du numérique, qui est pour l'instant sureprésenté par les hommes comme le montre ces statistiques :
-	    		</p>
+<div class="blurb">
+	<h1>Mes projets</h1>
 
-	    		<figure>
-					<img src="/ressources/taux_femmes_ens_sup.png" alt="Taux de Femme en étude Supérieur">
-					<figcaption>Proportion de femme en étude supérieure <a href="https://www.education.gouv.fr/cid57096/reperes-et-references-statistiques.html">source</a></figcaption>
-				</figure>
+	<h2>Liste des projets :</h2>
 
-				<p>
-					Seulement 1/3 des élèves ingénieurs sont des femmes, comme on peut le voir sur la première ligne.
-					Pour essayer de changer cela, le <a href="http://lycee-ledantec.fr/">Lycée Le Dantec</a>, <a href="http://www.enssat.fr/">l'ENSSAT</a>, <a href="https://www.orange.fr/portail">Orange</a> et <a href="http://www.ellesbougent.com/">Elles Bougent</a> ont décidé de créer cet évènement pour rentrer en contact avec les jeunes lycéennes et leur donner un premier aperçu du monde du numérique positif. 
-				</p>
-				<p>
-					Les lycéennes sont encadrées par des étudiantes qui sont en études supérieures. Cette aide est primordiale puisque les lycéennes n'ont aucune notion en programmation web. De plus, les tutrices donnent un exemple de femmes travaillant dans le monde du numérique pour briser les stéréotypes.
-				</p>
-
-			<h3>Description du projet Hackathon de l'ENSSAT :</h3>
-
-			<p>
-				Le projet Hackathon de l'ENSSAT est une compétition de programmation ouverte aux étudiants. Pendant l'évènement, les participants devaient proposer une solution informatique à un problème autour d'une thématique imposée. Tout cela en un temps limité à 24 heures. Ils sont pour cela en équipe de 5 et doivent faire une présentation de leur solution à la fin des 24 heures. Les étudiants sont évalués par un jury de professionels venant de milieux idustriels et de laboratoires. Le but de cette compétition est d'aider les étudiants à améliorer leurs compétences en les mettant dans des conditions difficiles (limitées à 24 heures !).
-			</p>
-
-
-	    	<h3>Ma contribution à ses deux projets :</h3>
-
-	    		<p>
-	    			En tant qu'étudiant à <a href="http://www.enssat.fr/">l'ENSSAT Lannion</a>, ces projets m'ont donné l'occasion de participer à la vie étudiante. J'ai été coordinateur des deux projets. Comme expliqué au dessus, le projet Ada Lovelace était constitué de beaucoup d'acteurs, mon travail a été de les coordonner de manière à créer un challenge intéressant et convivial pour les étudiants.
-	    		</p>
-	    		<p>
-	    			J'ai également dû organiser et aider l'équipe d'étudiants dont je faisais partie. J'ai, entre autre, participé à la création du budget, à la recherche de sponsors et à l'organisation de la logistique des évènements.
-	    			J'ai ainsi pû travailler sur la communication et les résolutions de conflits.
-	    		</p>
-
-	    		<p>
-	    			Le projet Ada Lovelace était ma première expérience de projet avec autant de partenaires. Elle a été positive, j'ai pu travailler et coordonner des personnes issues d'univers différents.
-	    		</p>
-
-	    	<h3>Liens vers des articles sur le challenge Ada Lovelace :</h3>
-	    	<ul>
-	    		<li>Article de <a href="https://www.ouest-france.fr/bretagne/lannion-22300/lannion-au-lycee-les-filles-font-parler-leur-science-6287822">Ouest France</a></li>
-		    	<li>Article du <a href="https://www.letelegramme.fr/cotes-darmor/lannion/ada-lovelace-des-nouveautes-pour-le-concours-20-03-2019-12237099.php">Télégramme</a></li>
-	    	</ul>
-			
-	    	<h3>Liens vers des articles sur le Hacakthon de l'ENSSAT :</h3>
-		    	<ul>
-		    		<li>Article de <a href="https://www.ouest-france.fr/bretagne/lannion-22300/six-equipes-au-marathon-du-code-hackathon-6267065">Ouest France</a></li>
-	    			<li>Article du <a href="https://www.letelegramme.fr/cotes-darmor/lannion/hackathon-une-appli-au-bout-de-la-nuit-18-03-2019-12235588.php">Télégramme</a></li>
-		    		
-		    	</ul>
+	<div class=articles>
+		{% for post in site.posts %}
+			{% if post.lang == "fr" %}
+			<div class=article>
+				<a href="{{ post.url }}" title="{{ post.title }}">
+				<div class=article_container>
+					<img class=post_image src="{{ post.image }}">
+					<div class=post_text>
+						<p class=post_title>{{ post.title }}</p>
+					</div> 
+				</div>
+				</a>
+			</div>	
+			{% endif %}	
+		{% endfor %}
 	</div>
-	<div class="box" id="BomberBall">
-    	<h2>Projet BomberBall</h2>
-    		<p>
-    			Le projet Bomberball est un projet de Génie Logiciel. C'est l'un des projets les plus ambitieux de mes années à l'ENSSAT. Lors de ce projet, nous faisions un jeu de rôle avec les enseignants. Nous représentions une entreprise et les enseignants nos clients.
-    			Lors de ce projet, nous avons répondu à un appel d'offre et avons organisé de nombreuses réunions pour comprendre les besoins du client. L'appel d'offre décrivait un jeu similaire au jeu Bomber Man. Nous avons codé ce jeu en Java car c'était le langage que nous maîtrisions le plus en 2ème année.
-    		</p>
-    		
-    		<h3>Le résultat :</h3>
-    			<p>Vous pouvez voir le repository git en cliquant <a href="https://github.com/cmoineau/GL-BomberBall">ici</a>.
-    			Vous pouvez regarder une vidéo de présentation que nous avons réalisée pour présenter notre jeu lors de la présentation finale : 
-    			<iframe style="border: 0; padding-top: 1em;" class="center" width="600" height="330" src="https://www.youtube.com/embed/0CLnEmHGonU" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-				</p>
-	</div>
-	</div><!-- /.blurb -->
-
+</div>
